--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <h1>Conjos el Mundo</h1>
     <canvas id="canvas" height="480" width="720"></canvas>
 </body>
+<script src="./models/drawable-object.class.js"></script>
+<script src="./models/status-bar.class.js"></script>
+<script src="./models/bottle-status-bar.class.js"></script>
 <script src="./models/world.class.js"></script>
 <script src="./models/movable-object.class.js"></script>
 <script src="./models/character.class.js"></script>
