--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <canvas id="canvas" height="480" width="720"></canvas>
 </body>
 <script src="./models/drawable-object.class.js"></script>
-<script src="./models/status-bar.class.js"></script>
-<script src="./models/bottle-status-bar.class.js"></script>
 <script src="./models/world.class.js"></script>
 <script src="./models/movable-object.class.js"></script>
+<script src="./models/throwable-object.class.js"></script>
+<script src="./models/status-bar.class.js"></script>
+<script src="./models/status-bar-bottle.class.js"></script>
+<script src="./models/status-bar-health.class.js"></script>
+<script src="./models/status-bar-coins.class.js"></script>
+<script src="./models/collectible-objects.class.js"></script>
+<script src="./models/collectible-bottles.class.js"></script>
+<script src="./models/coins.class.js"></script>
 <script src="./models/character.class.js"></script>
 <script src="./models/enemy.class.js"></script>
 <script src="./models/cloud.class.js"></script>
