page style and animate Endboss

--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Conjos el Mundo</title>
+    <title>El Pollo Loco</title>
 </head>
 
 <body onload="init()">
-    <h1>Conjos el Mundo</h1>
+    <h1>El Pollo Loco</h1>
+    <Border
+    BorderThickness="8"
+    BorderBrush="Black"
+    Background="LightGray"
+    HorizontalAlignment="Left"
+    VerticalAlignment="Top"
+    Width="480"
+    Height="720">
     <canvas id="canvas" height="480" width="720"></canvas>
+    </Border>
 </body>
 <script src="./models/drawable-object.class.js"></script>
 <script src="./models/world.class.js"></script>
