--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
     <title>El Pollo Loco</title>
 </head>
 
-<body onload="init()">
+<body>
     <h1>El Pollo Loco</h1>
     <div class="overlay">
         <canvas id="canvas" height="480" width="720"></canvas>
+
         <div id="buttonContainer" class="button-container d-none">
             <button id="restart">Neustart</button>
             <button id="main-menu">Hauptmenü</button>
+        </div>
+
+        <div id="startScreen" class="start-screen">
+            <img src="img/9_intro_outro_screens/start/startscreen_2.png" alt="background-image">
+            <div id="startScreenButtons" class="start-screen-buttons">
+                <button id="start">Start Game</button>
+                <button id="settings">settings</button>
+            </div>
         </div>
     </div>
 </body>
