--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>El Pollo Loco</h1>
-    <div class="overlay">
+    <div id="overlay" class="overlay">
         <canvas id="canvas" height="480" width="720"></canvas>
 
         <div id="buttonContainer" class="button-container d-none">
@@ -25,6 +25,14 @@
                 <button id="start">Start Game</button>
                 <button id="settings">settings</button>
             </div>
+        </div>
+        <div class="icons-container">
+            <button id="muteButton">
+                <img id="muteIcon" src="img/10_Icons/mute.png" alt="Mute Icon">
+            </button>
+            <button id="controller">
+                <img src="img/10_Icons/controller.png" alt="Controller Icon">
+            </button>
         </div>
     </div>
 </body>
