--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <img src="img/9_intro_outro_screens/start/startscreen_2.png" alt="background-image">
             <div id="startScreenButtons" class="start-screen-buttons">
                 <button id="start">Start Game</button>
-                <button id="settings">settings</button>
+                <a href="html\imprint.html"><button id="imprint">Imprint</button></a>
             </div>
         </div>
+
         <div class="icons-container">
             <button id="muteButton">
                 <img id="muteIcon" src="img/10_Icons/mute.png" alt="Mute Icon">
@@ -33,6 +34,42 @@
             <button id="controller">
                 <img src="img/10_Icons/controller.png" alt="Controller Icon">
             </button>
+        </div>
+
+        <div id="keyAssignment" class="key-assignment d-none">
+            <div><img src="img/10_Icons/right-arrow.png">Right</div>
+            <div><img src="img/10_Icons/left-arrow.png">Left</div>
+            <div><img src="img/10_Icons/up-arrow.png">Jump</div>
+            <div><img src="img/10_Icons/space.png">Throw Bottle</div>
+        </div>
+
+        <div id="winningScreen" class="winning-screen d-none">
+            <div id="stats" class="stats">
+                <img src="img/10_Icons/trophy.png" alt="trophy">
+                <div class="stats-text">
+                    <div>
+                        <p>Killed enemies:</p>
+                    </div>
+                    <div>
+                        <p>Collected coins:</p>
+                    </div>
+                    <div>
+                        <p>COLLECTED BOTTLES:</p>
+                    </div>
+                </div>
+                <div class="stat-numbers">
+                    <div>
+                        <p id="killedEnemies"></p>
+                    </div>
+                    <div>
+                        <p id="collectedCoins"></p>
+                    </div>
+                    <div>
+                        <p id="collectedBottles"></p>
+                    </div>
+                </div>
+            </div>
+            <!-- <button id="nextBtn">NEXT</button> -->
         </div>
     </div>
 </body>
@@ -44,6 +81,7 @@
 <script src="./models/status-bar-bottle.class.js"></script>
 <script src="./models/status-bar-health.class.js"></script>
 <script src="./models/status-bar-coins.class.js"></script>
+<script src="./models/statusbar-health-endboss.class.js"></script>
 <script src="./models/collectible-objects.class.js"></script>
 <script src="./models/collectible-bottles.class.js"></script>
 <script src="./models/coins.class.js"></script>
