--- a/html/imprint.html
+++ b/html/imprint.html
@@ -13,6 +13,7 @@ body {
     background-image: url('../img/01_page_background/page-background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     color: white;
     font-family: 'Chentenario';
     overflow: hidden; /* Verhindert, dass der Text außerhalb der Seite sichtbar ist */
