--- a/html/imprint.html
+++ b/html/imprint.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../img/2_character_pepe/1_idle/idle/I-1.png">
     <title>Impressum</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <style>
@@ -16,10 +16,9 @@ body {
     background-attachment: fixed;
     color: white;
     font-family: 'Chentenario';
-    overflow: scroll; /* Verhindert, dass der Text außerhalb der Seite sichtbar ist */
+    overflow: scroll; 
 }
 
-/* Schriftart */
 @font-face {
     font-family: 'Chentenario';
     src: url('../fonts/Chentenario.otf') format('opentype');
@@ -47,11 +46,11 @@ p {
 
 @keyframes slideIn {
     0% {
-        right: -100%; /* Anfangspunkt: Ganz rechts außerhalb des Sichtbereichs */
+        right: -100%;
         opacity: 0;
     }
     100% {
-        right: 0; /* Endposition: Ganz links im Sichtbereich */
+        right: 0;
         opacity: 1;
     }
 }
@@ -99,20 +98,15 @@ button:hover {
     <h1 id="impressum-heading">Impressum</h1>
     <h2 id="m46">Diensteanbieter</h2>
     <p>Stephan Steiner</p>
-    <p>Brandenburgerstaße 1 </p>
-    <p>71083 Herrenberg</p>
+    <p>Brandenburgerstraße 1 </p>
+    <p>98765 Buxdehude</p>
     <p>Deutschland</p>
 
     <h2 id="m56">Kontaktmöglichkeiten</h2>
     <p>E-Mail-Adresse: <a href="mailto:elPolloLoco@gmx.de">elPolloLoco@gmx.de</a></p>
-    <p>Telefon: 017813254896</p>
+    <p>Telefon: 0123456789</p>
 
-    <p class="seal">
-        <a href="https://datenschutz-generator.de/"
-            title="Rechtstext von Dr. Schwenke - für weitere Informationen bitte anklicken." target="_blank"
-            rel="noopener noreferrer nofollow">Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas
-            Schwenke</a>
-    </p>
+    <p class="seal"></p>
     <button><a href="../index.html">zurück</a></button>
 
     <!-- <script src="script.js"></script> -->
