--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <div class="icons-container">
+            <div class="icons-container" id="iconsContainer">
                 <button id="muteButton">
                     <img id="muteIcon" src="img/10_Icons/mute.png" alt="Mute Icon">
                 </button>
@@ -75,6 +75,7 @@
                 <p>Bitte drehe dein Gerät ins <strong>Querformat</strong></p>
             </div>
             <button id="fullscreenBtn" class="fullscreenBtn"><img src="./img/10_Icons/fullscreen.png" alt="fullscreen"></button>
+        <div class="mobile-controls-container d-none" id="mobileControlsContainer"></div>
         </div>
     </div>
 </body>
